# Novelaire

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
novelaire/: __init__.py  cli.py
novelaire/runtime/: agent_surface.py  approval.py  compaction.py  context_mgmt.py  error_codes.py  event_bus.py  frontmatter.py  ids.py  orchestrator.py  orchestrator_approvals.py  orchestrator_chat_loop.py  orchestrator_compaction.py  orchestrator_helpers.py  orchestrator_llm.py  orchestrator_llm_common.py  orchestrator_llm_complete.py  orchestrator_llm_stream.py  orchestrator_tool_loop.py  plan.py  project.py  protocol.py  skills.py  snapshots.py  spec_workflow.py  validate.py
novelaire/runtime/llm/: __init__.py  client.py  client_anthropic.py  client_common.py  client_exec_anthropic.py  client_exec_gemini_internal.py  client_exec_openai_compatible.py  client_gemini_internal.py  client_httpx_errors.py  client_openai.py  client_stream_guard.py  client_tool_calls.py  config.py  config_io.py  errors.py  router.py  secrets.py  trace.py  types.py
novelaire/runtime/mcp/: __init__.py  config.py  manager.py  stdio_client.py
novelaire/runtime/prompts/: compact_prompt.md  subagent_tool_interpreter.md  subagent_verifier.md  system_main.md
novelaire/runtime/stores/: __init__.py  base.py  fs.py
novelaire/runtime/subagents/: __init__.py  presets.py  runner.py
novelaire/runtime/tools/: __init__.py  aigc_detect.py  apply_edits_tool.py  apply_patch_engine.py  apply_patch_tool.py  builtins.py  discovery.py  mcp_router.py  plan.py  registry.py  (+8 more)
novelaire/ui/: __init__.py  console_ui.py
(+129 files in other folders)
